<resources>
    <string name="app_name">HR FUO</string>


    <!--    Profile View Activity-->
    <string name="profile_name">Don Sebastian</string>
    <string name="designation">Assistant Technician</string>
    <string name="profileimage_cont_desc" translatable="false">ProfileImage</string>
    <string name="age_pva">Age</string>
    <string name="empid_pva">Employee ID</string>
    <string name="mobno_pva">Mob no</string>
    <string name="dob_pva">DOB</string>
    <string name="gender_pva">Gender</string>
    <string name="qualification_pva">Qualification</string>
    <string name="address_pva">Address</string>
    <string name="no_data">No data</string>
    <!--    Profile View Activity-->


    <!--    Service Details Activity-->
    <string name="doj_sda">Date of joining</string>
    <string name="desig_on_join_sda">Desig. on joining</string>
    <string name="current_desig_sda">Current Desig.</string>
    <string name="dor_sda">Date of retirement</string>
    <string name="date_of_last_promotion_sda">Last promotion</string>
    <string name="date_of_next_promotion_sda">Next promotion</string>
    <string name="service_details_sda">Service Details</string>

    <!--    Service Details Activity-->

    <!--    Main Activity-->
    <string name="salary_ma">Salary</string>
    <string name="leave_ma">Leave</string>
    <string name="notifications_ma">Notification</string>
    <string name="others_ma">Others</string>
    <string name="mob_no_logA">Mobile number</string>
    <string name="paswd_loga">Password</string>
    <string name="login_logA">Login</string>
    <string name="forgot_pwd_loga">Forgot password ?</string>
    <string name="signup_logA">Don\'t have an account ? Create now</string>
    <string name="profile_ma">Profile</string>
    <string name="service_ma">Service</string>
    <string name="name_signup">Name</string>
    <string name="terms_n_conditions_signup">By creating an account, youa agree to the Terms and Use and Privacy policy</string>
    <string name="create_ac_signup">Sign Up</string>
    <string name="already_hav_ac_signup">Already have an account? Login now</string>
    <string name="add_word">Add Word</string>
    <string name="hint">Word</string>
    <string name="Save">button_save</string>
    <string name="empty_not_saved">Not Saved</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    Main Activity-->

</resources>
