<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ProfileViewActivity">

    <include layout="@layout/appbar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.cardview.widget.CardView
            android:id="@+id/customer"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/profileimage_cont_desc"
                    android:src="@android:drawable/ic_menu_gallery"
                    android:tint="@color/cardview_dark_background" />

                <TextView
                    android:id="@+id/profilename_pva_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/desig_pva_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/designation"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/empid_pva"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />


                <TextView
                    android:id="@+id/empid_pva_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/cell_shape"
                    android:gravity="end"
                    android:hint="@string/no_data"
                    android:padding="10dp"
                    android:textSize="16sp" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/mobno_pva"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />


                <TextView
                    android:id="@+id/mobno_pva_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/cell_shape"
                    android:gravity="end"
                    android:hint="@string/no_data"
                    android:padding="10dp"
                    android:textSize="16sp" />

            </TableRow>
            <TableRow
                android:id="@+id/tableRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/age_pva"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />


                <TextView
                    android:id="@+id/age_pva_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/cell_shape"
                    android:gravity="end"
                    android:hint="@string/no_data"
                    android:padding="10dp"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/dob_pva"
                    android:background="@drawable/cell_shape"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />


                <TextView
                    android:id="@+id/dob_pva_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:background="@drawable/cell_shape"
                    android:hint="@string/no_data"
                    android:padding="10dp"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/gender_pva"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />


                <TextView
                    android:id="@+id/gender_pva_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/cell_shape"
                    android:gravity="end"
                    android:hint="@string/no_data"
                    android:padding="10dp"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/qualification_pva"
                    android:background="@drawable/cell_shape"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />


                <TextView
                    android:id="@+id/qual_pva_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:hint="@string/no_data"
                    android:background="@drawable/cell_shape"
                    android:padding="10dp"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/address_pva"
                    android:background="@drawable/cell_shape"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />


                <TextView
                    android:id="@+id/addr_pva_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:hint="@string/no_data"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:textSize="16sp" />

            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>