<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/appbar"/>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="vertical"
            android:weightSum="2">

            <TableRow
                android:id="@+id/frstrow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/profile_btn_ma"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@android:drawable/ic_input_add"
                        android:text="@string/profile_ma"
                        android:textColor="@color/colorBlack" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/service_btn_ma"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@android:drawable/ic_btn_speak_now"
                        android:text="@string/service_ma"
                        android:textColor="@color/colorBlack" />

                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:id="@+id/secndrow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frstrow">

                <androidx.cardview.widget.CardView
                    android:id="@+id/salary_btn_ma"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@android:drawable/ic_lock_idle_low_battery"
                        android:drawableTint="@color/cardview_dark_background"
                        android:text="@string/salary_ma"
                        android:textColor="@color/colorBlack" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/leave_btn_ma"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@android:drawable/ic_media_rew"
                        android:drawableTint="@color/cardview_dark_background"
                        android:text="@string/leave_ma"
                        android:textColor="@color/colorBlack" />

                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secndrow">

                <androidx.cardview.widget.CardView
                    android:id="@+id/notify_btn_ma"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@android:drawable/ic_menu_camera"
                        android:drawableTint="@color/cardview_dark_background"
                        android:text="@string/notifications_ma"
                        android:textColor="@color/colorBlack" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/others_btn_ma"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@android:drawable/ic_menu_edit"
                        android:drawableTint="@color/cardview_dark_background"
                        android:text="@string/others_ma"
                        android:textColor="@color/colorBlack"
                        android:textSize="12sp" />

                </androidx.cardview.widget.CardView>

            </TableRow>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>